# mini

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_experiments.ps1  setup.py
config/: config.yaml
data/: __init__.py  affectnet_dataset.py  download_datasets.py  meld_dataset.py  transforms.py
docs/: research_runbook.md
explainers/: __init__.py  faithfulness.py  gradcam.py  nlg_report.py  shap_text.py
models/: __init__.py  fusion.py  multimodal_model.py  text_encoder.py  vision_encoder.py
scripts/: _audit_pipeline.py  _check_results.py  _inspect_checkpoints.py  _test_tokenizer.py  ablation.py  aggregate_xai.py  analyze_ambiguity.py  diagnose.py  evaluate.py  explain.py  explain_curated.py  run_faithfulness.py  train.py
training/: __init__.py  losses.py  metrics.py  trainer.py
utils/: __init__.py  face_quality.py  helpers.py  logger.py  visualization.py
